--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="app">
 <head>
   <title>Angular Friends</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -7,22 +7,27 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <h1>The <strong>facebook</strong> Friend Machine</h1>
 
-  <div class="friends">
+  <h1>The <strong>facebook</strong> Friend Machine</h1>
+  <div class="friends" ng-controller="FriendCtrl">
+    <!-- {{ test }} -->
+    <!-- {{friends}} -->
+
     <form class="form-inline searchForm" role="form">
       <div class="form-group">
-        <input class="form-control" placeholder="Search Anything About Your Friends">
+        <!-- <input class="form-control" placeholder="Search Anything About Your Friends" ng-model="searchTerm"> -->
+        <input class="form-control" placeholder="Search Name" ng-model="searchTerm.name">
+        <input class="form-control" placeholder="Search State" ng-model="searchTerm.location.state">
 
-        <select class="input-medium">
-          <option>Name</option>
-          <option>#Friends</option>
-          <option>City</option>
-          <option>State</option>
-          <option>Country</option>
+        <select class="input-medium" ng-model="sortProp" ng-options="fubu.value as fubu.name for fubu in newArray">
+          <!-- <option value="name">Name</option>
+          <option value="friend_count">#Friends</option>
+          <option value="location.city">City</option>
+          <option value="location.state">State</option>
+          <option value="location.country">Country</option> -->
         </select>
 
-        <select class="input-medium">
+        <select class="input-medium" ng-model="sortDirection">
           <option value="-">Descending</option>
           <option value="+">Ascending</option>
         </select>
@@ -30,17 +35,20 @@
     </form>
 
     <ul>
-      <li class='friend'>
-        <img class="profile-pic" src='http://placebear.com/50/50.jpg'>
-        <h3>Cali Fornia</h3>
+      <li class='friend' ng-repeat="friend in friends | filter: searchTerm | orderBy: sortDirection + sortProp">
+        <img class="profile-pic" ng-src='{{ friend.pic_square }}'>
+        <h3>{{ friend.name }}</h3>
         <div class="location">
-          Location: New Port Beach, California, United States
+          {{friend.location.city}},
+          {{friend.location.state}},
+          {{friend.location.country}}
+
         </div>
         <div class="status">
-          Status: I hate the snow. I wish I was on the beach right now!!!
+          {{friend.status}}
         </div>
         <div class="num-friends">
-          Friends: 1,367
+          {{friend.friend_count}}
         </div>
       </li>
     </ul>
@@ -49,5 +57,9 @@
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <!-- your scripts here -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+  <script src="app.js"></script>
+  <script src="FriendCtrl.js"></script>
+
 </body>
 </html>
